<resources>
    <string name="app_name" translatable="false">SmartHomeProject</string>
    <string name="enter">enter</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="language">language</string>
    <string name="continue_s">continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">no data</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
<string-array name="priorities">
    <item>High</item>
    <item>Medium</item>
    <item>Low</item>
</string-array>
</resources>